--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header>
 			<h1>
 				<a href="index.html">
-					<img src="assets/images/logo.png" alt="マウンテンデポのロゴ" width="152" height="142">
+					<img src="assets/images/logo.png" alt="Mountain Depot" width="152" height="142">
 				</a>
 			</h1>
 
@@ -42,7 +42,7 @@
 				<dt>
 					<picture>
 						<source srcset="assets/images/top/mainVisual_sp.png" media="(max-width: 767px)" width="707" height="792">
-						<img src="assets/images/top/mainVisual.png" alt="マウンテンデポのメインビジュアル" width="940" height="473">
+						<img src="assets/images/top/mainVisual.png" alt="キャンプに興味を持って、これからキャンプを始めてみようとする方へ" width="940" height="473">
 					</picture>	
 				</dt>
 				<dd>キャンプに興味を持って、
