--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="マウンテンデポのトップページ">
     <title>Mountain Depot - HOME</title>
 	<link rel="icon" href="assets/images/favicon.ico">
-    <link rel="stylesheet" href="assets/css/reset.css">
+        <link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/common.css">
 	<link rel="stylesheet" href="assets/css/top.css">
 </head>
@@ -23,13 +23,13 @@
 				<div class="menu">
 					<ul class="nav1">
 						<li class="top"><a href="index.html">ホーム</a></li>
-						<li><a href="shop/index.html">店舗情報</a></li>
-						<li><a href="contact/index.html">お問合せ</a></li>
+						<li><a href="#">店舗情報</a></li>
+						<li><a href="#">お問合せ</a></li>
 					</ul>
 					<ul class="nav2">
-						<li><a href="about/index.html">マウンテンデポとは</a></li>
-						<li><a href="gear/index.html">キャンプギア</a></li>
-						<li><a href="event/index.html">イベント情報</a></li>
+						<li><a href="#">マウンテンデポとは</a></li>
+						<li><a href="#">キャンプギア</a></li>
+						<li><a href="#">イベント情報</a></li>
 					</ul>
 				<!-- /.menu--></div>
 			</nav>
@@ -56,7 +56,7 @@
 				<span class="mv_link">&gt;<a href="about/index.html">マウンテンデポについて</a></span>
 			</p>
 
-			<!-- <p class="link"><a href="about/index.html"><span> &gt; </span>マウンテンデポについてはこちら</a></p> -->
+			<!-- <p class="link"><a href="#"><span> &gt; </span>マウンテンデポについてはこちら</a></p> -->
 
 			<hr>
 
@@ -75,7 +75,7 @@
 						<dd>オイルランタン</dd>
 						<dd>一番人気のオイルランタン</dd>
 						<dd>&yen;3,880(税込)</dd>
-						<dd class="check"><a href="gear/index.html">CHECK</a></dd>
+						<dd class="check"><a href="#">CHECK</a></dd>
 					</dl>
 
 					<dl>
@@ -88,7 +88,7 @@
 						<dd>蚊取り線香ホルダー</dd>
 						<dd>蚊取り線香専用のホルダー</dd>
 						<dd>&yen;700(税込)</dd>
-						<dd class="check"><a href="gear/index.html">CHECK</a></dd>
+						<dd class="check"><a href="#">CHECK</a></dd>
 					</dl>
 
 					<dl>
@@ -101,11 +101,11 @@
 						<dd>コンパクトガスバーナー</dd>
 						<dd>ホールド機能付きで安心</dd>
 						<dd>&yen;4,730(税込)</dd>
-						<dd class="check"><a href="gear/index.html">CHECK</a></dd>
+						<dd class="check"><a href="#">CHECK</a></dd>
 					</dl>
 				<!-- /.products--></div>
 
-				<p class="link"><a href="gear/index.html"><span> &gt; </span>おすすめキャンプギア一覧はこちら</a></p>
+				<p class="link"><a href="#"><span> &gt; </span>おすすめキャンプギア一覧はこちら</a></p>
 			<!-- /.gear--></section>
 
 			<hr>
@@ -115,14 +115,14 @@
 
 				<dl>
 					<dt>
-						<a href="event/index.html"><img class="banner" src="assets/images/top/event_bn.png" alt="Starter CAMPのバナー画像" width="778" height="239"></a>
+						<a href="#"><img class="banner" src="assets/images/top/event_bn.png" alt="Starter CAMPのバナー画像" width="778" height="239"></a>
 					</dt>
 					<dd>イベント名:Starter CAMP 2022SS_06</dd>
 					<dd>開催日時:2022年6月26日12時～6月27日14時</dd>
 					<dd>開催場所:千葉県茂原市上永吉00番0 レイクウッズガーデンはるひめの山</dd>
 				</dl>
 
-				<p class="link"><a href="event/index.html"><span> &gt; </span>イベント一覧はこちら</a></p>
+				<p class="link"><a href="#"><span> &gt; </span>イベント一覧はこちら</a></p>
 			<!-- /.news--></section>
 		</main>
 
@@ -131,9 +131,9 @@
 		<footer>
 			<div class="f_nav">
 				<ul class="f1">
-					<li><a href="about/index.html">マウンテンデポとは</a></li>
-					<li><a href="gear/index.html">キャンプギア</a></li>
-					<li><a href="event/index.html">イベント情報</a></li>
+					<li><a href="#">マウンテンデポとは</a></li>
+					<li><a href="#">キャンプギア</a></li>
+					<li><a href="#">イベント情報</a></li>
 				</ul>
 				<h3>Official SNS</h3>
 				<ul class="sns">
@@ -150,8 +150,8 @@
 				</ul>
 				<ul class="f2">
 					<li class="top"><a href="index.html">ホーム</a></li>
-					<li><a href="shop/index.html">店舗情報</a></li>
-					<li><a href="contact/index.html">お問合せ</a></li>
+					<li><a href="#">店舗情報</a></li>
+					<li><a href="#">お問合せ</a></li>
 				</ul>
 				<p><small>&copy; 2022 Mountain Depot All RIGHTS RESERVED.</small></p>
 			<!-- /.f_nav--></div>
